fix:swagger.yamlへの追記
